--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "react-router-dom": "^6.26.2",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.4.1"
   }
 }
