--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,38 @@
-absl-py==2.1.0
+aioice==0.9.0
+aiortc==1.9.0
 asgiref==3.8.1
+async-timeout==4.0.3
 attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
+av==12.3.0
 cffi==1.17.1
-contourpy==1.3.0
-cycler==0.12.1
+channels==4.1.0
+channels-redis==4.2.0
+constantly==23.10.4
+cryptography==43.0.1
+daphne==4.1.2
 Django==5.1.1
-flatbuffers==24.3.25
-fonttools==4.54.1
-jax==0.4.33
-jaxlib==0.4.33
-kiwisolver==1.4.7
-matplotlib==3.9.2
-mediapipe==0.10.14
-ml_dtypes==0.5.0
-numpy==2.1.1
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-opt_einsum==3.4.0
-packaging==24.1
-pillow==10.4.0
-protobuf==4.25.5
+dnspython==2.6.1
+google-crc32c==1.6.0
+hyperlink==21.0.0
+idna==3.10
+ifaddr==0.2.0
+incremental==24.7.2
+msgpack==1.1.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-scipy==1.14.1
-six==1.16.0
-sounddevice==0.5.0
+pyee==12.0.0
+pylibsrtp==0.10.0
+pyOpenSSL==24.2.1
+redis==5.1.0
+ruff==0.6.8
+service-identity==24.1.0
 sqlparse==0.5.1
+tomli==2.0.1
+Twisted==24.7.0
+txaio==23.1.1
 typing_extensions==4.12.2
-tzdata==2024.2
+websockets==13.1
+zope.interface==7.0.3
