--- a/nextjs-posture/package.json
+++ b/nextjs-posture/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.9.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "react": "^18",
